# wf-basic-deco

./: main.cpp  meson.build  protocol.cpp  protocol.hpp
proto/: meson.build  wf-decorator.xml
src/: frame.cpp  frame.hpp  main.cpp  meson.build
src/window/: decoration-protocol.cpp  decoration-protocol.hpp  input.cpp  input.hpp  meson.build  shm-surface.cpp  shm-surface.hpp  shm-util.cpp  window.cpp  window.hpp
wf-gtk3-decor/: main.cpp  meson.build  protocol.cpp
wf-plugin/: gtkdecor.cpp  meson.build
